# code_utils

./: README.md
python/: .pre-commit-config.yaml  ReadMe.md  pyproject.toml
python/decorators/: ReadMe.md  graph_size.py  log_timer.py
python/pyqt/costum_objects/: checkable_combobox.py  login.py
python/pyqt/costum_objects/slider/: double_slider.py  log_slider.py
python/pyqt/start-up_project/: main.py
python/pyqt/start-up_project/doc/: documentation.html
python/pyqt/start-up_project/gui/: documentation.py  main_app.py
python/pyqt/start-up_project/style/: styles.css
python/pyqt/utils/: convert_opencv_to_qt.py
python/requirements/: requirements_data.txt  requirements_file.txt  requirements_img.txt  requirements_ml.txt  requirements_pyqt.txt  requirements_start.txt
python/utils/ArgParser/: ArgParser.py  DateTimeAction.py  DictAction.py  FileCheckerAction.py
python/utils/teams_message/: teams_message.py
