[project]
name = "Project name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.389",
    "ruff>=0.8.0",
    "typos>=1.28.1",
]

[tool.ruff]
src = ["srcs"]
target-version = "py311"
line-length = 120
indent-width = 4
show-fixes = true
unsafe-fixes = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
#    GRPC related
    "protos",
    "*_pb2.py",
    "*_pb2_grpc.py",
#    Django related
    "migrations"
]

[tool.ruff.lint]
select = ["F", "E4", "E7", "E9", "W", "S", "I", "B","SIM"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.pyright]
include = ["srcs"]
exclude = ["**/.venv", "**/__pycache__"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "base_app.settings"
#pythonpath = [
#  "srcs",
#]
#testpaths = [
#    "tests",
#]
